fix: Condsistent spacing and sizes in blog posts

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -42,10 +42,8 @@ h1,
 h2 {
   margin: 1.2rem 0;
 }
-h3 {
-  margin: 0;
-  margin-bottom: 0.25rem;
-}
+
+
 // Main styles
 main {
   flex: 1 1 0%;
