--- a/sass/section.scss
+++ b/sass/section.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 img{
 	width: 100%;
 	display: block;
@@ -23,7 +24,7 @@ img{
     }
 
    #main-container{
-        max-width: 600px;
+        max-width: $max-content-width;
     }
 }
 
